--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,10 @@
         Hello <strong>{{ name }}</strong>! Nice to meet you.
     </p>
 
+<div class="d-flex gap-5 text-nowrap">
     <app-person-table></app-person-table>
     <app-person-table></app-person-table>
+    <app-person-table></app-person-table>
+</div>
 
 </div>
