--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
         Hello <strong>{{ name }}</strong>! Nice to meet you.
     </p>
 
+<app-event-bind-example></app-event-bind-example>    
+
 <h4>Component Input Example</h4>    
 
 <div class="d-flex gap-5 text-nowrap">
